# physio_datalogger-cbor2csv

./: .cruft.json  .gitignore  README.md  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
config/: config.json
data/: AFE4960_03_2026-01-12_20-10-50.cbor  Z_Motion_2026-01-14_21-52-32.cbor  Z_Motion_2026-01-19_10-48-03.cbor  result.csv
physio_datalogger/: main.py
src/: main.py
