[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "physio_datalogger-cbor2csv"
version = "0.1.0"
description = "A wonderful project"
authors = ["Aziz Ndiaye <a.ndiaye@catie.fr>"]
readme = "README.md"
packages = [{ include = "physio_datalogger" }]

[tool.poetry.scripts]
physio_datalogger = "physio_datalogger.main:main"

[tool.poetry.dependencies]
python = "^3.11"
